# django_intro

./: pyproject.toml
candy_project/: settings.py  urls.py
snickers/: tests.py  urls.py  views.py
templates/: about.html  base.html  home.html
